--- a/carousel.htm
+++ b/carousel.htm
@@ -30,15 +30,15 @@
     <div id="mycarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
-                <img src="Chica_Jumpscare.webp" alt="image too scary">
+                <img src="Jason_certificate.pdf" alt="image too cool">
             </div>
 
             <div class="item ">
-                <img src="OIP.webp" alt="image too scary">
+                <img src="OIP.webp" alt="image too cool">
             </div>
 
             <div class="item ">
-                <img src="alex.jpg" alt="image too scary">
+                <img src="d05f3d9881189c2605f6328514ca0d5b.jpg" alt="image too cool">
             </div>
         </div>
     </div>
